--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,17 @@
 </head>
 <body>
 
-<%= yield %>
+<%= render 'layouts/header' %>
+
+	<hr>
+
+	<div class="container">
+
+	<%= yield %>
+
+	<hr>
+
+	<%= render 'layouts/footer' %>
 
 </body>
 </html>
