--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<div class="hero-unit">
+
+
+	<h2>Welcome to a 
+	Theme Based Bible Reading!</h2>
+
+	<p><%=link_to "Sign Up to Read", "#", class: "btn btn-large btn-primary" %></p>
+
+</div>
