--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,9 +1,10 @@
 
-	<h2>About maxBibleReader:</h2>
-	<p>
-	Are you frustrated in bible reading? Overwhelemd by so much background in history and culture of the Israel people? 
-
-	A subject based Bible reading is now designed to make your reading enjoyable and productive.
-	The entire bible is organized into a coherent story of 12 themes.
-
-	</p>
+<h2>About maxBibleReader:</h2>
+	<ul>
+		<li><p>Are you frustrated in bible reading?</p> </li>
+		<li><p>Overwhelemd by so much background in history and culture of the Israel people? </p> </li>
+	</ul>
+</p>
+	A theme based Bible reading is now designed to make your reading enjoyable and productive.
+	The entire bible is organized into a coherent story of 12 themes. 
+</p>
