--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
 <div class="footer">
-	<small> Copyright 2013 @ maxBibleReader Inc.
+	<small> Copyright 2013 @ maxBibleReader Inc. Contact Email: dr.max.liu@gmail.com
 	</small>
 </div>
