--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,6 +4,7 @@
 	<h2>Welcome to a 
 	Theme Based Bible Reading!</h2>
 
-	<p><%=link_to "Sign Up to Read", "#", class: "btn btn-large btn-primary" %></p>
+	<p><%=link_to "Sign Up", "#", class: "btn btn-large btn-primary" %> for having your personal reading pages such as highlights, notes, reading progress, sharing with friends, etc. </p>
+	<p><%=link_to "Pass By", "#", class: "btn btn-large btn-primary" %> to go ahead reading </p>
 
 </div>
