--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,12 @@
 
 	<div class="container">
 
+	<% flash.each do |name, msg| %>
+
+		<%= content_tag(:div, msg, class: "alert alert-#{name}") %>
+
+	<% end %>
+
 	<%= yield %>
 
 	<hr>
