--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -6,7 +6,7 @@
 
 	<h2>歡迎來到聖經合部分題</h2>
 
-	<p><%=link_to "Sign Up", "#", class: "btn btn-large btn-primary" %> for having your personal reading pages such as highlights, notes, reading progress, sharing with friends, etc. </p>
+	<p><%=link_to "Sign Up", new_user_registration_path, class: "btn btn-large btn-primary" %> for having your personal reading pages such as highlights, notes, reading progress, sharing with friends, etc. </p>
 	<p><%=link_to "Pass By", "#", class: "btn btn-large btn-primary" %> to go ahead reading </p>
 
 </div>
