--- a/app/views/pages/topic_verse.html.erb
+++ b/app/views/pages/topic_verse.html.erb
@@ -2,13 +2,13 @@
 
 	<div class="row-fluid">
 			<div class="span3">
-				主題 <span class="badge badge-warning">9</span><h3>基督永遠的囯</h3> 
+				主題 <span class="badge badge-warning">9</span><h3>道成肉身</h3> 
 			</div>
 			<div class="span3">
-				分題 <span class="badge badge-info">9.7</span><h3>逼迫日增 </h3>
+				分題 <span class="badge badge-info">9.10</span><h3>逼迫日增</h3>
 			</div>
 			<div class="span4">
-				子題 <span class="badge badge-inverse">9.7.3</span><h3>五餅二魚</h3> 
+				子題 <span class="badge badge-inverse">9.10.3</span><h3>五餅二魚</h3> 
 			</div>
 			<div class="span2">
 				<div class="btn-group">
@@ -25,67 +25,278 @@
 
 	  <div class="span3">
 	  	<div class="well sidebar-nav">
-	  		<button type="button" class="btn btn-block btn-primary" data-toggle="collapse" data-target="#main_theme">
-				<h3>聖經主題：</h3>
-				</button>
 
-				<div id="main_theme" class="collapse in">
-					<ul class="nav nav-list">
-						<strong>
-	          <li><a href="#">神愛的創造與人的不信</a></li>
-	          <li><a href="#">亞伯拉罕之約與揀選</a></li>
-	          <li><a href="#">咒詛與祝福</a></li>
-	          <li><a href="#">4 曠野與得業</a></li>
-	          <li><a href="#">* 小結1： 希伯來書</a></li>
-	          <li><a href="#">5 以色列建國</a></li>
-	          <li><a href="#">6 王國分裂</a></li>
-	          <li><a href="#">7 王國滅亡</a></li>
-	          <li><a href="#">8 回歸</a></li>
-	          <li><a href="#">* 小結2： 兩約之間</a></li>
-	          <li class="active"><a href="#">9 基督生平</a></li>
-	          <li><a href="#">10 福音傳到地基</a></li>
-	          <li><a href="#">11 黎明前的黑暗</a></li>
-	          <li><a href="#">* 小結3： 約伯記</a></li>
-	          <li><a href="#">13 新天新地</a></li>
-	        </strong>
-	        </ul>
-				</div>
+	  		<button type="button" class="btn btn-block btn-primary">
+				<h3>聖經主題</h3>
+				</button>
+				<p></p>
+
+				<table class="table table-hover">
+
+	        <tbody>
+	          <tr>
+	            <td><span class="badge badge-warning">1</span></td>
+	            <td><a href="#"><font color="#000000">神愛的創造與人的不信</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-warning">2</span></td>
+	            <td><a href="#"><font color="#000000">亞伯拉罕之約與神的揀選</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-warning">3</span></td>
+	            <td><a href="#"><font color="#000000">咒詛與祝福</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-warning">4</span></td>
+	            <td><a href="#"><font color="#000000">曠野與得業</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-inverse">小結1</span></td>
+	            <td><a href="#"><font color="#000000">更美之約：希伯來書</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-warning">5</span></td>
+	            <td><a href="#"><font color="#000000">王國建立</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-warning">6</span></td>
+	            <td><a href="#"><font color="#000000">王國分裂</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-warning">7</span></td>
+	            <td><a href="#"><font color="#000000">王國滅亡</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-warning">8</span></td>
+	            <td><a href="#"><font color="#000000">百姓回歸</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-inverse">小結2</span></td>
+	            <td><a href="#"><font color="#000000">兩約之間</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-warning">9</span></td>
+	            <td><a href="#"><font color="#000000">道成肉身</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-warning">10</span></td>
+	            <td><a href="#"><font color="#000000">福音傳到地極</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-warning">11</span></td>
+	            <td><a href="#"><font color="#000000">黎明前的黑暗</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-inverse">小結3</span></td>
+	            <td><a href="#"><font color="#000000">面對苦難：約伯記</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-warning">12</span></td>
+	            <td><a href="#"><font color="#000000">新天新地</font></a></td>
+	          </tr>
+	        </tbody>
+	      </table>
 			</div>
 
 			<div class="well sidebar-nav">
-	  		<button type="button" class="btn btn-large btn-block btn-warning" data-toggle="collapse" data-target="#sub_theme">
-				分題：
-				</button>
 
-				<div id="sub_theme" class="collapse in">
-					<ul class="nav nav-list">
-	          <li><a href="#">ABCD</a></li>
-	          <li><a href="#">2 亞伯拉罕之約與揀選</a></li>
-	          <li class="active"><a href="#">3 咒詛與祝福</a></li>
-	          <li><a href="#">4 曠野與得業</a></li>
-	          <li><a href="#">* 小結1： 希伯來書</a></li>
-	          <li><a href="#">5 以色列建國</a></li>
-	          <li><a href="#">6 王國分裂</a></li>
-	        </ul>
-				</div>
+				<p>主題 <span class="badge badge-warning">9</span><h3>道成肉身</h3> </p>
+
+				<table class="table table-hover">
+
+	        <tbody>
+	          <tr>
+	            <td><span class="badge badge-info">1</span></td>
+	            <td><a href="#"><font color="#000000">耶穌是彌賽亞</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-info">2</span></td>
+	            <td><a href="#"><font color="#000000">耶穌誕生</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-info">3</span></td>
+	            <td><a href="#"><font color="#000000">耶穌幼年</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-info">4</span></td>
+	            <td><a href="#"><font color="#000000">施洗約翰傳道</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-info">5</span></td>
+	            <td><a href="#"><font color="#000000">傳道初期</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-info">6</span></td>
+	            <td><a href="#"><font color="#000000">加利利事工：迦百農</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-info">7</span></td>
+	            <td><a href="#"><font color="#000000">加利利事工：登山寳訓</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-info">8</span></td>
+	            <td><a href="#"><font color="#000000">加利利事工：事工擴展</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-info">9</span></td>
+	            <td><a href="#"><font color="#000000">加利利事工：訓練門徒</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-info">10</span></td>
+	            <td><a href="#"><font color="#000000">加利利事工：逼迫日增</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-info">11</span></td>
+	            <td><a href="#"><font color="#000000">離開加利利</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-info">12</span></td>
+	            <td><a href="#"><font color="#000000">比利亞事工</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-info">13</span></td>
+	            <td><a href="#"><font color="#000000">榮耀進城</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-info">14</span></td>
+	            <td><a href="#"><font color="#000000">警告與末世預言</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-info">15</span></td>
+	            <td><a href="#"><font color="#000000">被賣</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-info">16</span></td>
+	            <td><a href="#"><font color="#000000">受難</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-info">17</span></td>
+	            <td><a href="#"><font color="#000000">復活升天</font></a></td>
+	          </tr>
+	        </tbody>
+	      </table>
+
+
 			</div>
 
 			<div class="well sidebar-nav">
-	  		<button type="button" class="btn btn-large btn-block btn-success" data-toggle="collapse" data-target="#child_theme">
-				子題：
-				</button>
+	  		
+	  		<p>分題 <span class="badge badge-info">9.10</span>
+	  			<h4>加利利事工：逼迫日增</h4></p>
 
-				<div id="child_theme" class="collapse in">
-					<ul class="nav nav-list">
-	          <li><a href="#">1 神愛的創造與人的不信</a></li>
-	          <li><a href="#">2 亞伯拉罕之約與揀選</a></li>
-	          <li class="active"><a href="#">3 咒詛與祝福</a></li>
-	          <li><a href="#">4 曠野與得業</a></li>
-	          <li><a href="#">* 小結1： 希伯來書</a></li>
-	          <li><a href="#">5 以色列建國</a></li>
-	          <li><a href="#">6 王國分裂</a></li>
-	        </ul>
-				</div>
+	  		<table class="table table-hover">
+
+	        <tbody>
+	          <tr>
+	            <td><span class="badge badge-success">1</span></td>
+	            <td><a href="#"><font color="#000000">人子是安息日的主</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-success">2</span></td>
+	            <td><a href="#"><font color="#000000">駁斥鬼王趕鬼</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-success">3</span></td>
+	            <td><a href="#"><font color="#000000">七個汙鬼</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-success">4</span></td>
+	            <td><a href="#"><font color="#000000">除了約拿的神跡</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-important">詩篇109</span></td>
+	            <td><a href="#"><font color="#000000">惡人攻擊我</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-success">5</span></td>
+	            <td><a href="#"><font color="#000000">五餅二魚</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-success">6</span></td>
+	            <td><a href="#"><font color="#000000">行走海面</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-success">7</span></td>
+	            <td><a href="#"><font color="#000000">耶穌是生命的糧</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-important">詩篇23</span></td>
+	            <td><a href="#"><font color="#000000">耶和華是我的牧者</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-success">8</span></td>
+	            <td><a href="#"><font color="#000000">古人的遺傳</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-success">9</span></td>
+	            <td><a href="#"><font color="#000000">迦南的婦人</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-success">10</span></td>
+	            <td><a href="#"><font color="#000000">四千人吃飽</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-success">11</span></td>
+	            <td><a href="#"><font color="#000000">防备法利赛人的酵</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-success">12</span></td>
+	            <td><a href="#"><font color="#000000">医治瞎眼的</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-success">13</span></td>
+	            <td><a href="#"><font color="#000000">第一次预言受难</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-important">詩篇21</span></td>
+	            <td><a href="#"><font color="#000000">王倚靠耶和华</font></a></td>
+	          </tr>
+	          <tr>
+	            <td><span class="badge badge-success">14</span></td>
+	            <td><a href="#"><font color="#000000">登山变相</font></a></td>
+	          </tr>
+	          <td><span class="badge badge-success">15</span></td>
+	            <td><a href="#"><font color="#000000">医治巅痫的小孩</font></a></td>
+	          </tr>
+	          <td><span class="badge badge-success">16</span></td>
+	            <td><a href="#"><font color="#000000">第二次预言受难</font></a></td>
+	          </tr>
+	          <td><span class="badge badge-success">17</span></td>
+	            <td><a href="#"><font color="#000000">活水的江河</font></a></td>
+	          </tr>
+	          <td><span class="badge badge-success">18</span></td>
+	            <td><a href="#"><font color="#000000">行淫的妇人</font></a></td>
+	          </tr>
+	          <td><span class="badge badge-success">19</span></td>
+	            <td><a href="#"><font color="#000000">生命的光</font></a></td>
+	          </tr>
+	          <td><span class="badge badge-success">20</span></td>
+	            <td><a href="#"><font color="#000000">真理使人自由</font></a></td>
+	          </tr>
+	          <td><span class="badge badge-success">21</span></td>
+	            <td><a href="#"><font color="#000000">只求天父的荣耀</font></a></td>
+	          </tr>
+	          <td><span class="badge badge-success">22</span></td>
+	            <td><a href="#"><font color="#000000">纳税给该撒</font></a></td>
+	          </tr>
+	          <td><span class="badge badge-success">23</span></td>
+	            <td><a href="#"><font color="#000000">天国里谁最大</font></a></td>
+	          </tr>
+	          <td><span class="badge badge-success">24</span></td>
+	            <td><a href="#"><font color="#000000">不要禁止他</font></a></td>
+	          </tr>
+	          <td><span class="badge badge-success">25</span></td>
+	            <td><a href="#"><font color="#000000">不要叫人跌倒</font></a></td>
+	          </tr>
+	          <td><span class="badge badge-success">26</span></td>
+	            <td><a href="#"><font color="#000000">与弟兄和好</font></a></td>
+	          </tr>
+	          <td><span class="badge badge-success">27</span></td>
+	            <td><a href="#"><font color="#000000">饶恕70个7次</font></a></td>
+	          </tr>
+	        </tbody>
+	      </table>
+
 			</div>
 
 			<div class="well sidebar-nav">
@@ -248,10 +459,10 @@
 					</button>
 					<p></p>
 					<font color="#000000">
-	      		<p><span class="badge badge-warning">14:13</span>	耶稣听见了<font color="#FF0000">這事</font>，就<font color="#FF0000">独自上船退避</font>到野地里去。众人听见，就从各城里<font color="#FF0000">從陸地走去</font>跟随他。
-						<span class="badge">14:14</span>	耶稣<font color="#FF0000">下船上了岸</font>，见有许多的人，就怜悯他们，治好了他们<font color="#FF0000">當中</font>的病人。</p>
+	      		<p><span class="badge badge-warning">14:13</span>	耶稣听见了<font color="#FF0000">這事</font>，就<font color="#FF0000">独自上船退避</font>到野地里去。众人听见，就从各城<font color="#FF0000">走路過去</font>跟随他。
+						<span class="badge">14:14</span>	耶稣<font color="#FF0000">從船上了岸</font>，见有许多的人，就怜悯他们，治好了他们<font color="#FF0000">當中</font>的病人。</p>
 
-						<p><span class="badge badge-warning">14:15</span>	天<font color="#FF0000">快黑</font>的时候，门徒<font color="#FF0000">前来跟耶穌</font>说，这是野地，时候已经<font color="#FF0000">晚</font>了。请叫众人散<font color="#FF0000">去</font>，他们<font color="#FF0000">可以</font>往村子里去，自己买吃的。
+						<p><span class="badge badge-warning">14:15</span>	天<font color="#FF0000">快黑</font>的时候，门徒<font color="#FF0000">前来跟耶穌</font>说，这是野地，时候已<font color="#FF0000">晚</font>了。请叫众人散<font color="#FF0000">去</font>，他们<font color="#FF0000">可以</font>往村子里去，自己买吃的。
 						<span class="badge">14:16</span>	耶稣说，<font color="#FF0000">他们不用離</font>去，你们给他们<font color="#FF0000">東西</font>吃吧。
 						<span class="badge">14:17</span>	门徒说，我们这里只有五个饼，两条鱼。
 						<span class="badge">14:18</span>	耶稣说，拿过来给我。</p>
@@ -271,7 +482,7 @@
 	      		<span class="badge">6:31</span>	他就说，你们同我<font color="#FF0000">悄悄地</font>到<font color="#FF0000">野地</font>去歇一歇。这是因为来往的人多，他们连吃饭<font color="#FF0000">的時間也沒有</font>。</p>
 
 						<p><span class="badge badge-warning">6:32</span>	他们就坐船，<font color="#FF0000">悄悄地</font>往<font color="#FF0000">野地</font>去。
-						<span class="badge">6:33</span>	<font color="#FF0000">但</font>众人<font color="#FF0000">有许多认识他们的，看见他们去</font>，就从各城<font color="#FF0000">跑去</font>，比他们先<font color="#FF0000">到了海那邊</font>。<span class="badge">6:34</span>	耶稣<font color="#FF0000">下船上了岸</font>，见有许多的人，就怜悯他们。因为他们如同羊没有牧人一般。于是开口教训他们许多道理。</p>
+						<span class="badge">6:33</span>	<font color="#FF0000">但</font>众人<font color="#FF0000">有许多认识他们的，看见他们去</font>，就从各城<font color="#FF0000">追上去</font>，比他们先<font color="#FF0000">到了海那邊</font>。<span class="badge">6:34</span>	耶稣<font color="#FF0000">下船上了岸</font>，见有许多的人，就怜悯他们。因为他们如同羊没有牧人一般。于是开口教训他们许多道理。</p>
 
 						<p><span class="badge badge-warning">6:35</span> 天已经晚了，门徒进前来<font color="#FF0000">對耶穌</font>说，这是野地，天已经晚了，
 						<span class="badge">6:36</span>	请叫众人散开，他们好往四面乡村里去，自己买什么吃的。
