--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,6 +25,7 @@
 		    </ul>
 
 		    <ul class="nav pull-right">
+          <li><%= link_to "聯係我們", "#" %></li>
         <% if user_signed_in? %>
           <li><%= link_to current_user.name, edit_user_registration_path %></li>
           <li><%= link_to "登出", destroy_user_session_path, method: :delete %></li>
