--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
 <div class="footer">
-	<small> Copyright 2013 @ maxBibleReader Inc. Contact Email: dr.max.liu@gmail.com
+	<small> Copyright 2013 @ maxBibleReader Inc. 除中文和合本内容，maxBibleReader 保有所有文字内容版權。未經許可不得任意拷貝，轉載，發表等侵犯權利行爲。聯係郵箱地址: dr.max.liu@gmail.com
 	</small>
 </div>
