--- a/app/views/pages/topic_verse.html.erb
+++ b/app/views/pages/topic_verse.html.erb
@@ -1,4 +1,20 @@
-<div class="container-fluid">
+
+	<div class="container-fluid">
+
+	<div class="row-fluid">
+
+		<ul class="nav pull-right">
+			打開讀經新頁面： 
+			
+				<a href="http://localhost:3000/book_verse" target="_blank"><font color="#FF0000">書卷讀經</font></a> | 
+				<a href="http://localhost:3000/topic_verse" target="_blank"><font color="#FF0000">主題讀經</font></a>
+			
+		</ul>
+	</div>
+
+		 
+
+
 
 	<div class="row-fluid">
 			<div class="span3">
@@ -8,7 +24,7 @@
 				分題 <span class="badge badge-info">9.10</span><h3>逼迫日增</h3>
 			</div>
 			<div class="span4">
-				子題 <span class="badge badge-inverse">9.10.3</span><h3>五餅二魚</h3> 
+				子題 <span class="badge badge-inverse">9.10.6</span><h3>五餅二魚</h3> 
 			</div>
 			<div class="span2">
 				<div class="btn-group">
@@ -204,19 +220,23 @@
 	            <td><a href="#"><font color="#000000">除了約拿的神跡</font></a></td>
 	          </tr>
 	          <tr>
+	            <td><span class="badge badge-success">5</span></td>
+	            <td><a href="#"><font color="#000000">施洗約翰被殺</font></a></td>
+	          </tr>
+	          <tr>
 	            <td><span class="badge badge-important">詩篇109</span></td>
 	            <td><a href="#"><font color="#000000">惡人攻擊我</font></a></td>
 	          </tr>
 	          <tr>
-	            <td><span class="badge badge-success">5</span></td>
+	            <td><span class="badge badge-success">6</span></td>
 	            <td><a href="#"><font color="#000000">五餅二魚</font></a></td>
 	          </tr>
 	          <tr>
-	            <td><span class="badge badge-success">6</span></td>
+	            <td><span class="badge badge-success">7</span></td>
 	            <td><a href="#"><font color="#000000">行走海面</font></a></td>
 	          </tr>
 	          <tr>
-	            <td><span class="badge badge-success">7</span></td>
+	            <td><span class="badge badge-success">8</span></td>
 	            <td><a href="#"><font color="#000000">耶穌是生命的糧</font></a></td>
 	          </tr>
 	          <tr>
@@ -224,27 +244,27 @@
 	            <td><a href="#"><font color="#000000">耶和華是我的牧者</font></a></td>
 	          </tr>
 	          <tr>
-	            <td><span class="badge badge-success">8</span></td>
+	            <td><span class="badge badge-success">9</span></td>
 	            <td><a href="#"><font color="#000000">古人的遺傳</font></a></td>
 	          </tr>
 	          <tr>
-	            <td><span class="badge badge-success">9</span></td>
+	            <td><span class="badge badge-success">10</span></td>
 	            <td><a href="#"><font color="#000000">迦南的婦人</font></a></td>
 	          </tr>
 	          <tr>
-	            <td><span class="badge badge-success">10</span></td>
+	            <td><span class="badge badge-success">11</span></td>
 	            <td><a href="#"><font color="#000000">四千人吃飽</font></a></td>
 	          </tr>
 	          <tr>
-	            <td><span class="badge badge-success">11</span></td>
+	            <td><span class="badge badge-success">12</span></td>
 	            <td><a href="#"><font color="#000000">防备法利赛人的酵</font></a></td>
 	          </tr>
 	          <tr>
-	            <td><span class="badge badge-success">12</span></td>
+	            <td><span class="badge badge-success">13</span></td>
 	            <td><a href="#"><font color="#000000">医治瞎眼的</font></a></td>
 	          </tr>
 	          <tr>
-	            <td><span class="badge badge-success">13</span></td>
+	            <td><span class="badge badge-success">14</span></td>
 	            <td><a href="#"><font color="#000000">第一次预言受难</font></a></td>
 	          </tr>
 	          <tr>
@@ -252,46 +272,46 @@
 	            <td><a href="#"><font color="#000000">王倚靠耶和华</font></a></td>
 	          </tr>
 	          <tr>
-	            <td><span class="badge badge-success">14</span></td>
+	            <td><span class="badge badge-success">15</span></td>
 	            <td><a href="#"><font color="#000000">登山变相</font></a></td>
 	          </tr>
-	          <td><span class="badge badge-success">15</span></td>
+	          <td><span class="badge badge-success">16</span></td>
 	            <td><a href="#"><font color="#000000">医治巅痫的小孩</font></a></td>
 	          </tr>
-	          <td><span class="badge badge-success">16</span></td>
+	          <td><span class="badge badge-success">17</span></td>
 	            <td><a href="#"><font color="#000000">第二次预言受难</font></a></td>
 	          </tr>
-	          <td><span class="badge badge-success">17</span></td>
+	          <td><span class="badge badge-success">18</span></td>
 	            <td><a href="#"><font color="#000000">活水的江河</font></a></td>
 	          </tr>
-	          <td><span class="badge badge-success">18</span></td>
+	          <td><span class="badge badge-success">19</span></td>
 	            <td><a href="#"><font color="#000000">行淫的妇人</font></a></td>
 	          </tr>
-	          <td><span class="badge badge-success">19</span></td>
+	          <td><span class="badge badge-success">20</span></td>
 	            <td><a href="#"><font color="#000000">生命的光</font></a></td>
 	          </tr>
-	          <td><span class="badge badge-success">20</span></td>
+	          <td><span class="badge badge-success">21</span></td>
 	            <td><a href="#"><font color="#000000">真理使人自由</font></a></td>
 	          </tr>
-	          <td><span class="badge badge-success">21</span></td>
+	          <td><span class="badge badge-success">22</span></td>
 	            <td><a href="#"><font color="#000000">只求天父的荣耀</font></a></td>
 	          </tr>
-	          <td><span class="badge badge-success">22</span></td>
+	          <td><span class="badge badge-success">23</span></td>
 	            <td><a href="#"><font color="#000000">纳税给该撒</font></a></td>
 	          </tr>
-	          <td><span class="badge badge-success">23</span></td>
+	          <td><span class="badge badge-success">24</span></td>
 	            <td><a href="#"><font color="#000000">天国里谁最大</font></a></td>
 	          </tr>
-	          <td><span class="badge badge-success">24</span></td>
+	          <td><span class="badge badge-success">25</span></td>
 	            <td><a href="#"><font color="#000000">不要禁止他</font></a></td>
 	          </tr>
-	          <td><span class="badge badge-success">25</span></td>
+	          <td><span class="badge badge-success">26</span></td>
 	            <td><a href="#"><font color="#000000">不要叫人跌倒</font></a></td>
 	          </tr>
-	          <td><span class="badge badge-success">26</span></td>
+	          <td><span class="badge badge-success">27</span></td>
 	            <td><a href="#"><font color="#000000">与弟兄和好</font></a></td>
 	          </tr>
-	          <td><span class="badge badge-success">27</span></td>
+	          <td><span class="badge badge-success">28</span></td>
 	            <td><a href="#"><font color="#000000">饶恕70个7次</font></a></td>
 	          </tr>
 	        </tbody>
@@ -338,6 +358,11 @@
 							<span class="badge badge-success">馬可6:30-6:34</span> 
 							<span class="badge badge-success">路加9:10-9:17</span> 
 							<span class="badge badge-success">約翰6:2-6:15</span> 
+
+				   		<h3>相關聖經主題:</h3>
+				   		<span class="badge badge-important">9.10.5</span> 四千人吃飽
+							<span class="badge badge-important">9.10.11</span> 施洗約翰被殺
+ 
 				   	</div>
 				  </div>
 
@@ -353,6 +378,7 @@
 	          </div>
 	        </div>
 	        <p></p>
+
 			  </div>
 
 			</div>
@@ -560,14 +586,14 @@
 
 	        <p><button type="button" class="btn btn-mini btn-info">太14:14</button> <button type="button" class="btn btn-mini btn-info">可6:33-34</button> <button type="button" class="btn btn-mini btn-info">加9:11</button> <button type="button" class="btn btn-mini btn-info">約6:2</button>
 	        耶穌的事工，特別是醫治，帶給許多在苦難中的猶太人盼望，因此愈來愈多人跟隨耶穌。隨之而來的是工作繁重，體力付出過多。
-	        他們悄悄地離開坐船，是爲了避開群衆的跟隨，沒法休息。
-	        但衆人發現他們的行蹤，就快快追上。顯然衆人只看見自己的需要，不知道耶穌和他的門徒們事工已經很辛苦。
+	        他們悄悄地離開坐船，是爲了避開群衆的跟隨，不然沒法休息。
+	        但衆人發現他們的行蹤，就快快追上。顯然他們只看見自己的需要，不知道耶穌和他的門徒們事工已經很辛苦。
 	        衆人從陸路過去當然要比坐船要路遠，但他們迫切需要耶穌的幫助，所以顧不了許多。他們的迫切從其中許多有病的就可以知道。
 	        耶穌了解他們的迫切，所以當他下船看見衆人，就沒有拒絕他們，繼續服事他們。</p>
 
 	        <p><button type="button" class="btn btn-mini btn-info">太14:15-16</button> <button type="button" class="btn btn-mini btn-info">可6:35-37</button> <button type="button" class="btn btn-mini btn-info">加9:12-13</button> <button type="button" class="btn btn-mini btn-info">約6:5-7</button>
 	        服事的時間應該有一段時間，門徒等到天要黑了，真是不行了，請耶穌打發衆人散去。
-	        但耶穌竟然憐憫衆人沒有吃飯，不允。還要門徒找吃的給他們。門徒對耶穌的要求真是無法理解，這要花多少錢？20兩銀子約當時半年的工資。</p>
+	        但耶穌竟然憐憫衆人沒有吃飯，不允。還要門徒找吃的給他們。耶穌詢問腓力，因爲他是伯賽大人，他可能知道哪裏有買吃的。他對耶穌的要求真是無法理解，這要花多少錢？20兩銀子約當時半年的工資。</p>
 
 	        <p><button type="button" class="btn btn-mini btn-info">約6:8-10</button>安德烈的回應可能只是一個玩笑話。沒想到耶穌當真，拿起五餅二魚叫衆人坐下（耶穌再一次顯明他對衆人的憐憫之心）。</p>
 
@@ -594,7 +620,7 @@
 					經文内容摘要
 					</button>
 					<p></p>
-					<p><span class="badge badge-inverse">故事背景</span>	羅馬統治下的以色列人生活困苦流離，百姓在心靈上和生活上都需要迫切幫助。分封的希律王殘暴，不久前殺了施洗約翰。雖然如此，耶穌差遣門徒各處傳道，醫治病人。</p>
+					<p><span class="badge badge-inverse">故事背景</span>	羅馬統治下的以色列人生活困苦流離，百姓在心靈上和生活上都需要迫切幫助。分封的希律王殘暴，不久前殺了施洗約翰。</p>
 					<p><span class="badge badge-inverse">故事時間</span>	春天，快要過逾越節了。距離耶穌上十字架的最後晚餐約一年。</p>
 					<p><span class="badge badge-inverse">故事地點</span>	加利利海東邊，伯賽大附近的野地。</p>
 					<p><span class="badge badge-inverse">主要人物</span>	耶穌，12門徒，一個孩童，和衆人。</p>
@@ -664,7 +690,7 @@
 	        <p><span class="badge badge-inverse">3</span> 門徒對耶穌要求他們把食物分給衆人很不高興。他們或許信心不夠認爲這太脫離現實了，或許太看重金錢，或許認爲這些衆人不可愛，不不值得關心他們到這個份上。我如果是門徒會如何反應？我的問題出在哪裏？</p>
 	        <p><span class="badge badge-inverse">4</span> 為什麼在這麽多人的中間，只有這個小孩拿出了他的五餅二魚？這個事件對這孩子的將來有何影響？
 	        <p><span class="badge badge-inverse">5</span>你是否盼望你的一點點付出讓耶穌放大万倍？但是在你自身非常有限的時候，你仍願意嗎？</p>
-	        <p><span class="badge badge-inverse">6</span>耶穌在愈來愈多人跟隨他的時候，他拒絕他們要求他做王，反而有獨自退去，顯明耶穌沒有權利欲望。所以如果你是牧師，要如何警惕自己 ，不要在有愈來愈多會衆或事工愈做愈大是，忘記神起初的呼召，變得驕傲自大？如果你不是，檢查自己心中所追求的，是爲了自己還是出於無私的愛？</p>
+	        <p><span class="badge badge-inverse">6</span>耶穌在愈來愈多人跟隨他的時候，他拒絕他們要求他做王，反而有獨自退去，顯明耶穌沒有權利欲望。所以如果你是牧師，要如何警惕自己 ，不要在有愈來愈多會衆或事工愈做愈大時，忘記神起初的呼召，變得驕傲自大？如果你不是，檢查自己心中所追求的，是爲了自己還是出於無私的愛？</p>
 
 	        <p><a href="#" class="btn btn-primary"><i class="icon-heart icon-white"></i>若以上<font color="FFFF88">思想問題</font>有幫助，請按此</a></p>
 
