--- a/app/views/pages/topics.html.erb
+++ b/app/views/pages/topics.html.erb
@@ -1,13 +1,7 @@
 
 <h2>歡迎來到主題式讀經</h2>
 <p>
-	在這今天快速腳步的世代，人們的時間不夠用。許多孩子見不到忙碌工作的父親，許多夫妻沒有時間説話，隔壁的鄰居不知道是誰，上網的速度愈來愈快，但人活的壓力愈來愈大，愈來愈不知道生命是什麼。雖然網路上又許多信息，但人的精神的内涵愈來愈貧乏，需要愈來愈刺激勁爆的新聞八卦，常常被色情賭博網站所捆綁而無法脫離，網絡上陌生的朋友取代親近的家人。所帶來的結果是迷失的下一代，婚姻觀念的扭曲，健康家庭的瓦解，和因精神疾病帶來傷害家庭社會的事件不斷增加。
-</p>
-<p>
-	聖經66卷書，是神寶貴的話語，能照亮我們的生命，指引我們人生正確的方向。更重要的聖經幫助我們認識智慧和愛的源頭救主耶穌。祂救我們脫離罪惡的捆綁，得以進入他榮耀與慈愛的國度裏。祂在軟弱時能給我們力量和醫治，祂的愛不離不棄，祂賜的福不會先甜后苦。
-</p>
-	許多人想好好讀懂聖經，可是常常因爲歷史，地理，翻譯，等各樣問題而不能完成。鑒于聖經是這樣寶貴的書，我們將整本聖經用主題的方式展開，將所有聖經書卷根據時間和情節重新整理成爲深動，感人，有趣，有關聯主題的書。如此讀者在閲讀時就不會迷失在聖經的大海裏，反而能有更深的領受。需要注意的是，雖然我們把聖經按著主題做了閲讀次序的整理，這些整理基本上仍然是以書卷為單位，以避免斷章的問題。
-<p>
+	選擇有興趣的主題，點擊進入，就可以開始閲讀。如果你是會員，請先登錄，maxBibleReader就會從上次你讀到的地方繼續開始。
 </p>
 
 <hr class="featurette-divider">
@@ -16,53 +10,147 @@
 
   <div class="span3">
   	<div class="well sidebar-nav">
-  		<button type="button" class="btn btn-large btn-block btn-primary">
-			主題式讀經：
-			</button>
 
-			<div>
-				<ul class="nav nav-list">
-          <li><a href="#">1 神愛的創造與人的不信</a></li>
-          <li><a href="#">2 亞伯拉罕之約與揀選</a></li>
-          <li><a href="#">3 捆綁與自由</a></li>
-          <li><a href="#">4 曠野與得業</a></li>
-          <li class="active"><a href="#">小結1： 希伯來書</a></li>
-          <li><a href="#">5 王國建立</a></li>
-          <li><a href="#">6 王國分裂</a></li>
-          <li><a href="#">7 王國滅亡</a></li>
-          <li><a href="#">8 百姓回歸</a></li>
-          <li class="active"><a href="#">小結2： 兩約之間</a></li>
-          <li><a href="#">9 基督永遠的囯</a></li>
-          <li><a href="#">10 福音傳到地極</a></li>
-          <li><a href="#">11 黎明前的黑暗</a></li>
-          <li class="active"><a href="#">小結3： 約伯記</a></li>
-          <li><a href="#">12 新天新地</a></li>
-        </ul>
-			</div>
-		</div>
+      <button type="button" class="btn btn-block btn-primary">
+      <h3>整本聖經閲讀：</h3>
+      </button>
+      <p></p>
+
+      <table class="table table-hover">
+
+        <tbody>
+          <tr>
+            <td><span class="badge badge-warning">1</span></td>
+            <td><a href="#"><font color="#000000">神愛的創造與人的不信</font></a></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-warning">2</span></td>
+            <td><a href="#"><font color="#000000">亞伯拉罕之約與神的揀選</font></a></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-warning">3</span></td>
+            <td><a href="#"><font color="#000000">咒詛與祝福</font></a></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-warning">4</span></td>
+            <td><a href="#"><font color="#000000">曠野與得業</font></a></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-inverse">小結1</span></td>
+            <td><a href="#"><font color="#000000">更美之約：希伯來書</font></a></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-warning">5</span></td>
+            <td><a href="#"><font color="#000000">王國建立</font></a></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-warning">6</span></td>
+            <td><a href="#"><font color="#000000">王國分裂</font></a></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-warning">7</span></td>
+            <td><a href="#"><font color="#000000">王國滅亡</font></a></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-warning">8</span></td>
+            <td><a href="#"><font color="#000000">百姓回歸</font></a></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-inverse">小結2</span></td>
+            <td><a href="#"><font color="#000000">兩約之間</font></a></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-warning">9</span></td>
+            <td><a href="#"><font color="#000000">道成肉身</font></a></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-warning">10</span></td>
+            <td><a href="#"><font color="#000000">福音傳到地極</font></a></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-warning">11</span></td>
+            <td><a href="#"><font color="#000000">黎明前的黑暗</font></a></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-inverse">小結3</span></td>
+            <td><a href="#"><font color="#000000">面對苦難：約伯記</font></a></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-warning">12</span></td>
+            <td><a href="#"><font color="#000000">新天新地</font></a></td>
+          </tr>
+        </tbody>
+      </table>
+      
+    </div>
 
 		<div class="well sidebar-nav">
-  		<button type="button" class="btn btn-large btn-block btn-warning">
-			其它讀經主題：
+  		<button type="button" class="btn btn-block btn-primary">
+			<h3>小範圍聖經閲讀：</h3>
 			</button>
 
-			<div>
-				<ul class="nav nav-list">
-	        <li><a href="#">基督生平：福音和參</a></li>
-	        <li><a href="#">祭司的國度</a></li>
-	        <li><a href="#">以色列歷史</a></li>
-	        <li><a href="#">雅歌</a></li>
-	        <li><a href="#">希伯來書</a></li>
-	        <li><a href="#">箴言</a></li>
-	        <li><a href="#">約伯記</a></li>
-	        <li><a href="#">初代教會</a></li>
-	        <li><a href="#">保儸行蹤</a></li>
-	        <li><a href="#">住在基督裏</a></li>
-	        <li><a href="#">打美好的仗</a></li>
-	        <li><a href="#">教會治理</a></li>
-	        <li><a href="#">啓示錄與末世預言</a></li>
-	       </ul>
-			</div>
+      <table class="table table-hover">
+
+        <tbody>
+          <tr>
+            <td><span class="badge badge-warning">1</span></td>
+            <td><a href="#"><font color="#000000">天國世界觀</font></a></td>
+          </tr
+          <tr>
+            <td><span class="badge badge-warning">2</span></td>
+            <td><a href="#"><font color="#000000">因信稱義</font></a></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-warning">3</span></td>
+            <td><a href="#"><font color="#000000">基督生平：四福音和參</font></a></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-warning">4</span></td>
+            <td><a href="#"><font color="#000000">從亞伯拉罕到摩西</font></a></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-warning">5</span></td>
+            <td><a href="#"><font color="#000000">以色列歷史</font></a></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-warning">6</span></td>
+            <td><a href="#"><font color="#000000">更美的約</font></a></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-warning">7</span></td>
+            <td><a href="#"><font color="#000000">約伯記</font></a></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-warning">8</span></td>
+            <td><a href="#"><font color="#000000">雅歌</font></a></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-warning">9</span></td>
+            <td><a href="#"><font color="#000000">箴言</font></a></td>
+          </tr>
+          <tr>
+          <tr>
+            <td><span class="badge badge-warning">10</span></td>
+            <td><a href="#"><font color="#000000">初代教會</font></a></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-warning">11</span></td>
+            <td><a href="#"><font color="#000000">住在基督裏</font></a></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-warning">12</span></td>
+            <td><a href="#"><font color="#000000">打美好的仗</font></a></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-warning">13</span></td>
+            <td><a href="#"><font color="#000000">教會治理</font></a></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-warning">14</span></td>
+            <td><a href="#"><font color="#000000">啓示錄與末世預言</font></a></td>
+          </tr>
+        </tbody>
+      </table>
 		</div>
 
 		<div class="well sidebar-nav">
@@ -182,7 +270,7 @@
             </div>
           </div>
         </li>
-        
+
         <li class="span4">
           <div class="thumbnail">
             <img data-src="holder.js/250x600" alt="">
