--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,14 +1,31 @@
 <div class="hero-unit">
+	<h2>歡迎來到 maxBibleReader!</h2>
+	<p> 這是以鼓勵聖經閲讀，激發個人生活智慧，增進屬靈生命成長的網站。</p>
+</div>
 
-
-	<h2>Welcome to a 
-	Theme Based Bible Reading!</h2>
-
-	<h2>歡迎來到聖經合部分題</h2>
-
-	<p><%=link_to "新人註冊", new_user_registration_path, class: "btn btn-large btn-block btn-primary" %> 你可以享有各樣個人讀經的功能，建立分享小組。 </p>
-	<p>直接開始<%=link_to "書卷讀經", book_verse_path, class: "btn btn-large btn-block btn-primary" %>或者
-	<%=link_to "主題讀經", topic_verse_path, class: "btn btn-large btn-block btn-primary" %>
+	<p >
+	聖經66卷書，是神寶貴的話語，能照亮我們的生命，指引我們人生正確的方向。更重要的聖經幫助我們認識智慧和愛的源頭救主耶穌。祂救我們脫離罪惡的捆綁，得以進入他榮耀與慈愛的國度裏。祂在軟弱時能給我們力量和醫治，祂的愛不離不棄，祂賜的福不會先甜后苦。
 	</p>
 
-</div>
+	<p>
+	但在這今天快速腳步的世代，人們的時間不夠用，愈來愈少時間讀書，當然就更少有時間讀聖經。人們看起來很忙碌，但生活質量卻往下降。許多孩子見不到忙碌工作的父親，許多夫妻沒有時間説話，隔壁的鄰居從來沒見過。上網的速度愈來愈快，但人活的壓力愈來愈大，愈來愈不知道生命是什麼。雖然網路上又許多信息，但人的精神的内涵愈來愈貧乏，需要愈來愈刺激勁爆的新聞八卦，常常被色情賭博網站所捆綁而無法脫離，網絡上陌生的朋友取代親近的家人。所帶來的結果是迷失的下一代，婚姻觀念的扭曲，健康家庭的瓦解，和因精神疾病帶來傷害家庭社會的事件不斷增加。
+	</p>
+
+	<p>
+	有許多人想讀懂聖經，可是常常因爲歷史，地理，翻譯，等各樣問題而不能完成。鑒于聖經是這樣寶貴的書，如何輕鬆卻能有果效的把聖經讀完就成爲一個重要但挑戰的事。maxBibleReader在此提供了以主題為單位的主題式閲讀。這是相對于傳統的以書卷為單位的閲讀方式。
+	主題式聖經將整本聖經用主題的方式展開，將所有聖經書卷根據時間和情節重新整理，成爲深動，感人，有趣，有關聯主題的書。如此讀者在閲讀時就不會迷失在聖經的大海裏，反而能有更深的領受。需要注意的是，雖然我們把聖經按著主題做了閲讀次序的整理，這些整理基本上仍然是以書卷為單位，以避免斷章的問題。
+	</p>
+
+	<p>
+	從此進入<%=link_to "主題讀經", topics_path, class: "btn btn-min btn-primary" %>，現在你就可以開始體驗主題式讀經的喜樂。
+	</p>
+
+	<p>你也可以從此進入<%=link_to "書卷讀經", book_verse_path, class: "btn btn-min btn-primary" %>,直接開始以書卷為單位的傳統閲讀方式。maxBibleReader同時提供了豐富的材料，增加你閲讀的享受。</p>
+
+	<p>如果你想擁有雲端服務，儲存讀經心得筆記，收藏別人的分享，發表個人領受，建立讀經夥伴群等豐富功能，請你加入成爲會員。
+		<%=link_to "新人註冊", new_user_registration_path, class: "btn btn-min btn-warning" %> 
+	</p>
+
+	<p>祝您閲讀愉快！</p>
+
+
